# ual-ecar-pkg

./: CMakeLists.txt  README.md
Claraquino/: CClaraquino.cpp  CClaraquino.h  CMakeLists.txt  main.cpp
SteerControllerLowLevel/: CMakeLists.txt  CSteerControllerLowLevel.cpp  CSteerControllerLowLevel.h  CSteerControllerLowLevel_model.cpp  main.cpp
eCarOdometry/: CMakeLists.txt  CeCarOdometryApp.cpp  CeCarOdometryApp.h  eCarOdometry_example.moos  main.cpp
missions/ecar/: ChessboardDetector.moos  GPS.moos  IMU_XSens.moos  JeroTests.moos  MOOSDB_with_webserver.moos  NIDAQ.moos  RearEncodersAndOdometry.moos  Repetitive_maneuver.moos  SICK_front.moos  ScopeLogger_remote.moos  SteerControllerLowLevel.moos  StereoCamera.moos  cite4.simplemap  cite4_gridmap_no00.gridmap  global.moos  stereo_calib.ini
scripts/: 88-ual-ecar.rules
